# actions

./: .gitignore  README.md  actions.doap  meson.build
actions/: actions.gresource.xml.in  actions.in  actions.py  main.py  meson.build  shared.py.in  variables.py  window.py
actions/gtk/: help-overlay.blp  style.css  window.blp
data/: meson.build  page.kramo.Actions.desktop.in  page.kramo.Actions.gschema.xml.in  page.kramo.Actions.metainfo.xml.in
data/icons/: meson.build
flatpak/: page.kramo.Actions.Devel.json
po/: POTFILES  meson.build
